# moby-ros

./: .gitignore  LICENSE  README.md
src/moby_bringup/: CMakeLists.txt  package.xml
src/moby_description/: CMakeLists.txt  package.xml
src/moby_description/launch/: moby_description.launch
src/moby_description/meshes/moby_rp/collision/: Bottom_frame.stl  Left_rot_motor.stl  Right_rot_motor.stl
src/moby_description/meshes/moby_rp/visual/: Right_wheel.stl  Top_frame.stl
src/moby_description/meshes/moby_rp_v3/collision/: Left_rot_motor.stl  Right_rot_motor.stl
src/moby_description/meshes/moby_rp_v3/visual/: Bottom_frame.stl  Left_wheel.stl  Top_frame.stl
src/moby_description/meshes/other_meshes/: Realsense_d415.stl  Realsense_d435.stl  Sick_Tim771S.stl
src/moby_description/urdf/: materials.xacro  moby.urdf.xacro  moby_common.xacro  moby_macro.xacro  moby_transmissions.xacro  realsense_d415.urdf.xacro  realsense_d435.urdf.xacro  sick_tim771s.urdf.xacro
src/moby_description/urdf/config/moby_rp/: joint_limits.yaml  kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
src/moby_description/urdf/config/moby_rp_v3/: kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
src/moby_gazebo/: CMakeLists.txt  package.xml
src/moby_gazebo/controller/: moby_rp_controllers.yaml
src/moby_gazebo/launch/: moby_gazebo.launch
src/moby_gazebo/models/aruco_0/: aruco_0.sdf  model.config
src/moby_gazebo/models/aruco_0/material/scripts/: aruco_0.material
src/moby_gazebo/models/aruco_1/: aruco_1.sdf  model.config
src/moby_gazebo/models/aruco_1/material/scripts/: aruco_1.material
src/moby_gazebo/models/aruco_2/: aruco_2.sdf  model.config
src/moby_gazebo/models/aruco_2/material/scripts/: aruco_2.material
src/moby_gazebo/models/aruco_3/: aruco_3.sdf  model.config
src/moby_gazebo/models/kitchen_table/: kitchen_table.sdf
src/moby_gazebo/models/simple_objects/: model.config  model.sdf
src/moby_gazebo/models/simple_walls/: model.config  model.sdf
src/moby_gazebo/src/: swerve_drive_controller.py  teleop_gazebo.py
src/moby_gazebo/worlds/: example.world  room.world
(+32 files in other folders)
