<?xml version="1.0"?>
<package format="2">
  <name>moby_description</name>
  <version>1.0.0</version>
  <description>The moby_description package</description>
  <maintainer email="nguyen.pham@neuromeka.com">Nguyen Pham</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
